--- a/CaseStudyAssetManagement/.classpath
+++ b/CaseStudyAssetManagement/.classpath
@@ -11,6 +11,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/hexaware_java/CaseStudyAssetManagement/lib/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="E:/CORE JAVA/Assignment_Demo/libs/mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
