--- a/CaseStudyAssetManagement/resources/DBConfig.properties
+++ b/CaseStudyAssetManagement/resources/DBConfig.properties
@@ -2,4 +2,4 @@ driver.classname =  com.mysql.cj.jdbc.Driver
 url =   jdbc:mysql://localhost:3306/assetmanagement
 
 username = root
-password = password
+password = Raji#1234
