--- a/CaseStudyAssetManagement/.classpath
+++ b/CaseStudyAssetManagement/.classpath
@@ -16,6 +16,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/hexaware_java/CaseStudyAssetManagement/lib/mysql-connector-java-8.0.30.jar"/>
+	<classpathentry kind="lib" path="E:/CORE JAVA/CaseStudyAssetManagement/lib/mysql-connector-java-8.0.30.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
